infrastructure/operators/monitoring/tailnet-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: grafana-tailnet
  namespace: monitoring
  annotations:
    tailscale.com/experimental-forward-cluster-traffic-via-ingress: "true"
    tailscale.com/tags: "tag:internal-apps"
spec:
  ingressClassName: tailscale
  tls:
    - hosts:
        - grafana
  defaultBackend:
    service:
      name: kube-prometheus-stack-grafana
      port:
        number: 8005
